Open API Generator Gradle plugin DTOs modified
