# topics/open-api-generator-gradle/src/main/java/by/rymko/openapigeneratorgradle/controller/ProjectController.java
@@ -26,9 +26,9 @@ public class ProjectController implements ProjectsApi {
     }
 
     @Override
-    public ResponseEntity<ProjectResponse> createProject(@Valid ProjectRequest projectRequest) {
+    public ResponseEntity<ProjectRequest> createProject(@Valid ProjectRequest projectRequest) {
         Project project = projectService.createProject(ProjectModelMapper.toEntity(projectRequest));
-        return ResponseEntity.status(CREATED).body(toApi(project));
+        return ResponseEntity.status(CREATED).body(projectRequest);
 
     }
 
